--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:required="true"/>
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <!--<uses-permission android:name="android.permission.CAMERA"/>-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -38,7 +38,7 @@
         </activity>
         <activity
             android:name="com.notMyCode.AsyncProcessTask"
-            android:label="@string/title_activity_async_process_task"
+            andrjoid:label="@string/title_activity_async_process_task"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
